bootstrap files address is corrected now

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Portfolio</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css" />
     <script src="js/fontawesome-all.min.js"></script>
   </head>
   <body>
@@ -13,12 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img
-            src="./image/progskillss.png"
-            alt="progskillss logo"
-            width="60"
-            height="60"
-          />
+          <img src="./image/progskillss.png" alt="progskillss logo" width="60" height="60" />
           ProgSkillss
         </a>
         <button
@@ -59,16 +54,14 @@
         <div class="col-12 col-lg-6">
           <h3>About</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Necessitatibus laboriosam nobis ipsum architecto delectus
-            dignissimos adipisci quos, tempore commodi quidem velit incidunt
-            iusto quisquam officiis molestiae porro odit est amet.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus laboriosam nobis ipsum architecto
+            delectus dignissimos adipisci quos, tempore commodi quidem velit incidunt iusto quisquam officiis molestiae
+            porro odit est amet.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Necessitatibus laboriosam nobis ipsum architecto delectus
-            dignissimos adipisci quos, tempore commodi quidem velit incidunt
-            iusto quisquam officiis molestiae porro odit est amet.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus laboriosam nobis ipsum architecto
+            delectus dignissimos adipisci quos, tempore commodi quidem velit incidunt iusto quisquam officiis molestiae
+            porro odit est amet.
           </p>
         </div>
       </div>
@@ -78,56 +71,32 @@
         <div class="col-12 col-md-6 col-xl-3 mb-4">
           <a href="portfolio-item.html">
             <figure class="figure">
-              <img
-                class="figure-img img-fluid img-thumbnail"
-                src="./image/510x400.png"
-                alt="Portfolio Item Heading"
-              />
-              <figcaption class="figure-caption">
-                Portfolio Item Heading
-              </figcaption>
+              <img class="figure-img img-fluid img-thumbnail" src="./image/510x400.png" alt="Portfolio Item Heading" />
+              <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
             </figure>
           </a>
         </div>
         <div class="col-12 col-md-6 col-xl-3 mb-4">
           <a href="portfolio-item.html">
             <figure class="figure">
-              <img
-                class="figure-img img-fluid img-thumbnail"
-                src="./image/510x400.png"
-                alt="Portfolio Item Heading"
-              />
-              <figcaption class="figure-caption">
-                Portfolio Item Heading
-              </figcaption>
+              <img class="figure-img img-fluid img-thumbnail" src="./image/510x400.png" alt="Portfolio Item Heading" />
+              <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
             </figure>
           </a>
         </div>
         <div class="col-12 col-md-6 col-xl-3 mb-4">
           <a href="portfolio-item.html">
             <figure class="figure">
-              <img
-                class="figure-img img-fluid img-thumbnail"
-                src="./image/510x400.png"
-                alt="Portfolio Item Heading"
-              />
-              <figcaption class="figure-caption">
-                Portfolio Item Heading
-              </figcaption>
+              <img class="figure-img img-fluid img-thumbnail" src="./image/510x400.png" alt="Portfolio Item Heading" />
+              <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
             </figure>
           </a>
         </div>
         <div class="col-12 col-md-6 col-xl-3 mb-4">
           <a href="portfolio-item.html">
             <figure class="figure">
-              <img
-                class="figure-img img-fluid img-thumbnail"
-                src="./image/510x400.png"
-                alt="Portfolio Item Heading"
-              />
-              <figcaption class="figure-caption">
-                Portfolio Item Heading
-              </figcaption>
+              <img class="figure-img img-fluid img-thumbnail" src="./image/510x400.png" alt="Portfolio Item Heading" />
+              <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
             </figure>
           </a>
         </div>
@@ -139,10 +108,9 @@
           <figure>
             <blockquote class="blockquote">
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Ducimus voluptates quae voluptatum, repudiandae et ipsa ea
-                sequi, officiis assumenda modi, exercitationem vero impedit
-                vitae non adipisci dignissimos provident consequatur veritatis!
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus voluptates quae voluptatum,
+                repudiandae et ipsa ea sequi, officiis assumenda modi, exercitationem vero impedit vitae non adipisci
+                dignissimos provident consequatur veritatis!
               </p>
             </blockquote>
             <figcaption class="blockquote-footer">Firsname Lastname</figcaption>
@@ -152,10 +120,9 @@
           <figure>
             <blockquote class="blockquote">
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Ducimus voluptates quae voluptatum, repudiandae et ipsa ea
-                sequi, officiis assumenda modi, exercitationem vero impedit
-                vitae non adipisci dignissimos provident consequatur veritatis!
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus voluptates quae voluptatum,
+                repudiandae et ipsa ea sequi, officiis assumenda modi, exercitationem vero impedit vitae non adipisci
+                dignissimos provident consequatur veritatis!
               </p>
             </blockquote>
             <figcaption class="blockquote-footer">Firsname Lastname</figcaption>
@@ -165,10 +132,9 @@
           <figure>
             <blockquote class="blockquote">
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Ducimus voluptates quae voluptatum, repudiandae et ipsa ea
-                sequi, officiis assumenda modi, exercitationem vero impedit
-                vitae non adipisci dignissimos provident consequatur veritatis!
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus voluptates quae voluptatum,
+                repudiandae et ipsa ea sequi, officiis assumenda modi, exercitationem vero impedit vitae non adipisci
+                dignissimos provident consequatur veritatis!
               </p>
             </blockquote>
             <figcaption class="blockquote-footer">Firsname Lastname</figcaption>
@@ -182,32 +148,17 @@
           <div class="col-12 col-md-6">
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
-              <input
-                id="name"
-                type="text"
-                class="form-control"
-                placeholder="Enter your name"
-              />
+              <input id="name" type="text" class="form-control" placeholder="Enter your name" />
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input
-                id="email"
-                type="email"
-                class="form-control"
-                placeholder="Enter your email"
-              />
+              <input id="email" type="email" class="form-control" placeholder="Enter your email" />
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="mb-3">
               <label for="message" class="form-label">Message</label>
-              <textarea
-                id="message"
-                class="form-control"
-                rows="4"
-                placeholder="Enter your message"
-              ></textarea>
+              <textarea id="message" class="form-control" rows="4" placeholder="Enter your message"></textarea>
             </div>
           </div>
         </div>
@@ -222,10 +173,7 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-code text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-code text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Code</h5>
             </div>
@@ -249,22 +197,13 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-paint-brush text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-paint-brush text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Design</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-behance text-muted"></i
-                ><a href="#0">Behance</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-dribbble text-muted"></i
-                ><a href="#0">Dribbble</a>
-              </li>
+              <li><i class="fab fa-fw fa-behance text-muted"></i><a href="#0">Behance</a></li>
+              <li><i class="fab fa-fw fa-dribbble text-muted"></i><a href="#0">Dribbble</a></li>
             </ul>
           </div>
           <!--  -->
@@ -272,22 +211,13 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-images text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-images text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Photography</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-flickr text-muted"></i
-                ><a href="#0">Flicker</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-instagram text-muted"></i
-                ><a href="#0">Instagram</a>
-              </li>
+              <li><i class="fab fa-fw fa-flickr text-muted"></i><a href="#0">Flicker</a></li>
+              <li><i class="fab fa-fw fa-instagram text-muted"></i><a href="#0">Instagram</a></li>
             </ul>
           </div>
           <!--  -->
@@ -295,32 +225,21 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-video text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-video text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Video</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-youtube text-muted"></i
-                ><a href="#0">YouTube</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-vimeo text-muted"></i
-                ><a href="#0">Vimeo</a>
-              </li>
+              <li><i class="fab fa-fw fa-youtube text-muted"></i><a href="#0">YouTube</a></li>
+              <li><i class="fab fa-fw fa-vimeo text-muted"></i><a href="#0">Vimeo</a></li>
             </ul>
           </div>
           <!--  -->
-          <p class="text-center mb-0">
-            &copy; 2020 Firstnam Lastname. All right reserved.
-          </p>
+          <p class="text-center mb-0">&copy; 2020 Firstnam Lastname. All right reserved.</p>
         </div>
         <!-- row -->
       </div>
     </footer>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../Bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
