--- a/Portfolio/portfolio-overview.html
+++ b/Portfolio/portfolio-overview.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Overview</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css" />
     <script src="js/fontawesome-all.min.js"></script>
   </head>
   <body>
@@ -13,12 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img
-            src="./image/progskillss.png"
-            alt="progskillss logo"
-            width="60"
-            height="60"
-          />
+          <img src="./image/progskillss.png" alt="progskillss logo" width="60" height="60" />
           ProgSkillss
         </a>
         <button
@@ -50,20 +45,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -71,20 +57,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -92,20 +69,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -113,20 +81,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -134,20 +93,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -155,20 +105,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -176,20 +117,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -197,20 +129,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -218,20 +141,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -239,20 +153,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -260,20 +165,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -281,20 +177,11 @@
         <div class="col-12 col-md-6 col-xl-4 mb-4">
           <div class="card">
             <div class="badge bg-primary position-absolute mt-3 ml-3">Tag</div>
-            <img
-              class="card-img-top"
-              src="image/510x400.png"
-              alt="Portfolio Item Heading"
-            />
+            <img class="card-img-top" src="image/510x400.png" alt="Portfolio Item Heading" />
             <div class="card-body">
               <h3 class="card-title">Portfolio Item Heading</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                fugiat tempore cons
-              </p>
-              <a href="portfolio-item.html" class="btn btn-primary w-100"
-                >See Item</a
-              >
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui fugiat tempore cons</p>
+              <a href="portfolio-item.html" class="btn btn-primary w-100">See Item</a>
             </div>
             <div class="card-footer small">Created DD-MM-YYYY</div>
           </div>
@@ -309,10 +196,7 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-code text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-code text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Code</h5>
             </div>
@@ -336,22 +220,13 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-paint-brush text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-paint-brush text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Design</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-behance text-muted"></i
-                ><a href="#0">Behance</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-dribbble text-muted"></i
-                ><a href="#0">Dribbble</a>
-              </li>
+              <li><i class="fab fa-fw fa-behance text-muted"></i><a href="#0">Behance</a></li>
+              <li><i class="fab fa-fw fa-dribbble text-muted"></i><a href="#0">Dribbble</a></li>
             </ul>
           </div>
           <!--  -->
@@ -359,22 +234,13 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-images text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-images text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Photography</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-flickr text-muted"></i
-                ><a href="#0">Flicker</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-instagram text-muted"></i
-                ><a href="#0">Instagram</a>
-              </li>
+              <li><i class="fab fa-fw fa-flickr text-muted"></i><a href="#0">Flicker</a></li>
+              <li><i class="fab fa-fw fa-instagram text-muted"></i><a href="#0">Instagram</a></li>
             </ul>
           </div>
           <!--  -->
@@ -382,32 +248,21 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-video text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-video text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Video</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-youtube text-muted"></i
-                ><a href="#0">YouTube</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-vimeo text-muted"></i
-                ><a href="#0">Vimeo</a>
-              </li>
+              <li><i class="fab fa-fw fa-youtube text-muted"></i><a href="#0">YouTube</a></li>
+              <li><i class="fab fa-fw fa-vimeo text-muted"></i><a href="#0">Vimeo</a></li>
             </ul>
           </div>
           <!--  -->
-          <p class="text-center mb-0">
-            &copy; 2020 Firstnam Lastname. All right reserved.
-          </p>
+          <p class="text-center mb-0">&copy; 2020 Firstnam Lastname. All right reserved.</p>
         </div>
         <!-- row -->
       </div>
     </footer>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../Bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
