--- a/Portfolio/portfolio-item.html
+++ b/Portfolio/portfolio-item.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Item</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css" />
     <script src="js/fontawesome-all.min.js"></script>
   </head>
   <body>
@@ -13,12 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img
-            src="./image/progskillss.png"
-            alt="progskillss logo"
-            width="60"
-            height="60"
-          />
+          <img src="./image/progskillss.png" alt="progskillss logo" width="60" height="60" />
           ProgSkillss
         </a>
         <button
@@ -57,11 +52,7 @@
         <div class="col-12 col-xl-8 mb-4 mb-xl-0">
           <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <ol class="carousel-indicators">
-              <li
-                data-bs-target="#carousel"
-                data-bs-slide-to="0"
-                class="active"
-              ></li>
+              <li data-bs-target="#carousel" data-bs-slide-to="0" class="active"></li>
               <li data-bs-target="#carousel" data-bs-slide-to="1"></li>
               <li data-bs-target="#carousel" data-bs-slide-to="2"></li>
               <li data-bs-target="#carousel" data-bs-slide-to="3"></li>
@@ -69,83 +60,47 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img
-                  src="image/930x700.png"
-                  alt="First slide"
-                  class="d-block w-100"
-                />
+                <img src="image/930x700.png" alt="First slide" class="d-block w-100" />
                 <div class="carousel-caption">
                   <h3>Caption</h3>
                   <p>This text describes the first slide</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="image/930x700.png"
-                  alt="Second slide"
-                  class="d-block w-100"
-                />
+                <img src="image/930x700.png" alt="Second slide" class="d-block w-100" />
                 <div class="carousel-caption">
                   <h3>Caption</h3>
                   <p>This text describes the second slide</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="image/930x700.png"
-                  alt="Third slide"
-                  class="d-block w-100"
-                />
+                <img src="image/930x700.png" alt="Third slide" class="d-block w-100" />
                 <div class="carousel-caption">
                   <h3>Caption</h3>
                   <p>This text describes the third slide</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="image/930x700.png"
-                  alt="Fourth slide"
-                  class="d-block w-100"
-                />
+                <img src="image/930x700.png" alt="Fourth slide" class="d-block w-100" />
                 <div class="carousel-caption">
                   <h3>Caption</h3>
                   <p>This text describes the fourth slide</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="image/930x700.png"
-                  alt="Fifth slide"
-                  class="d-block w-100"
-                />
+                <img src="image/930x700.png" alt="Fifth slide" class="d-block w-100" />
                 <div class="carousel-caption">
                   <h3>Caption</h3>
                   <p>This text describes the fifth slide</p>
                 </div>
               </div>
             </div>
-            <a
-              href="#carousel"
-              class="carousel-control-prev"
-              role="button"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
+            <a href="#carousel" class="carousel-control-prev" role="button" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </a>
-            <a
-              href="#carousel"
-              class="carousel-control-next"
-              role="button"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
+            <a href="#carousel" class="carousel-control-next" role="button" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </a>
           </div>
@@ -153,14 +108,11 @@
         <div class="col-12 col-xl-4">
           <h3>Project Description</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-            suscipit, neque adipisci modi inventore consequuntur. Iusto
-            repellendus quibusdam atque perspiciatis repellat adipisci sed ipsa
-            minus at. Fugiat ratione aliquam recusandae? Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Nemo suscipit, neque adipisci
-            modi inventore consequuntur. Iusto repellendus quibusdam atque
-            perspiciatis repellat adipisci sed ipsa minus at. Fugiat ratione
-            aliquam recusandae?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo suscipit, neque adipisci modi inventore
+            consequuntur. Iusto repellendus quibusdam atque perspiciatis repellat adipisci sed ipsa minus at. Fugiat
+            ratione aliquam recusandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo suscipit, neque
+            adipisci modi inventore consequuntur. Iusto repellendus quibusdam atque perspiciatis repellat adipisci sed
+            ipsa minus at. Fugiat ratione aliquam recusandae?
           </p>
           <h3>Project Details</h3>
           <ul>
@@ -181,56 +133,32 @@
         <div class="col-12 col-md-6 col-xl-3 mb-4">
           <a href="portfolio-item.html">
             <figure class="figure">
-              <img
-                class="figure-img img-fluid img-thumbnail"
-                src="image/510x400.png"
-                alt="Portfolio Item Heading"
-              />
-              <figcaption class="figure-caption">
-                Portfolio Item Heading
-              </figcaption>
+              <img class="figure-img img-fluid img-thumbnail" src="image/510x400.png" alt="Portfolio Item Heading" />
+              <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
             </figure>
           </a>
         </div>
         <div class="col-12 col-md-6 col-xl-3 mb-4">
           <a href="portfolio-item.html">
             <figure class="figure">
-              <img
-                class="figure-img img-fluid img-thumbnail"
-                src="image/510x400.png"
-                alt="Portfolio Item Heading"
-              />
-              <figcaption class="figure-caption">
-                Portfolio Item Heading
-              </figcaption>
+              <img class="figure-img img-fluid img-thumbnail" src="image/510x400.png" alt="Portfolio Item Heading" />
+              <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
             </figure>
           </a>
         </div>
         <div class="col-12 col-md-6 col-xl-3 mb-4">
           <a href="portfolio-item.html">
             <figure class="figure">
-              <img
-                class="figure-img img-fluid img-thumbnail"
-                src="image/510x400.png"
-                alt="Portfolio Item Heading"
-              />
-              <figcaption class="figure-caption">
-                Portfolio Item Heading
-              </figcaption>
+              <img class="figure-img img-fluid img-thumbnail" src="image/510x400.png" alt="Portfolio Item Heading" />
+              <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
             </figure>
           </a>
         </div>
         <div class="col-12 col-md-6 col-xl-3 mb-4">
           <a href="portfolio-item.html">
             <figure class="figure">
-              <img
-                class="figure-img img-fluid img-thumbnail"
-                src="image/510x400.png"
-                alt="Portfolio Item Heading"
-              />
-              <figcaption class="figure-caption">
-                Portfolio Item Heading
-              </figcaption>
+              <img class="figure-img img-fluid img-thumbnail" src="image/510x400.png" alt="Portfolio Item Heading" />
+              <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
             </figure>
           </a>
         </div>
@@ -244,10 +172,7 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-code text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-code text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Code</h5>
             </div>
@@ -271,22 +196,13 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-paint-brush text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-paint-brush text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Design</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-behance text-muted"></i
-                ><a href="#0">Behance</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-dribbble text-muted"></i
-                ><a href="#0">Dribbble</a>
-              </li>
+              <li><i class="fab fa-fw fa-behance text-muted"></i><a href="#0">Behance</a></li>
+              <li><i class="fab fa-fw fa-dribbble text-muted"></i><a href="#0">Dribbble</a></li>
             </ul>
           </div>
           <!--  -->
@@ -294,22 +210,13 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-images text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-images text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Photography</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-flickr text-muted"></i
-                ><a href="#0">Flicker</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-instagram text-muted"></i
-                ><a href="#0">Instagram</a>
-              </li>
+              <li><i class="fab fa-fw fa-flickr text-muted"></i><a href="#0">Flicker</a></li>
+              <li><i class="fab fa-fw fa-instagram text-muted"></i><a href="#0">Instagram</a></li>
             </ul>
           </div>
           <!--  -->
@@ -317,32 +224,21 @@
             <div class="d-flex align-items-center mb-2">
               <div class="fa-layers fa-fw fa-2x mr-1">
                 <i class="fas fa-circle text-muted"></i>
-                <i
-                  class="fas fa-video text-white"
-                  data-fa-transform="shrink-10"
-                ></i>
+                <i class="fas fa-video text-white" data-fa-transform="shrink-10"></i>
               </div>
               <h5 class="m-0">Video</h5>
             </div>
             <ul class="list-unstyled">
-              <li>
-                <i class="fab fa-fw fa-youtube text-muted"></i
-                ><a href="#0">YouTube</a>
-              </li>
-              <li>
-                <i class="fab fa-fw fa-vimeo text-muted"></i
-                ><a href="#0">Vimeo</a>
-              </li>
+              <li><i class="fab fa-fw fa-youtube text-muted"></i><a href="#0">YouTube</a></li>
+              <li><i class="fab fa-fw fa-vimeo text-muted"></i><a href="#0">Vimeo</a></li>
             </ul>
           </div>
           <!--  -->
-          <p class="text-center mb-0">
-            &copy; 2020 Firstnam Lastname. All right reserved.
-          </p>
+          <p class="text-center mb-0">&copy; 2020 Firstnam Lastname. All right reserved.</p>
         </div>
         <!-- row -->
       </div>
     </footer>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../Bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
