--- a/Resume and CV page/index.html
+++ b/Resume and CV page/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume and CV - Firstname Lastname</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css" />
     <script defer src="js/fontawesome-all.min.js"></script>
   </head>
   <body class="bg-light">
@@ -737,6 +737,6 @@
       </div>
     </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="../Bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
