--- a/Knowledge Base/index.html
+++ b/Knowledge Base/index.html
@@ -48,6 +48,45 @@
             <button type="submit" class="btn btn-primary" id="buttonSearch">Search</button>
           </div>
         </form>
+        <h2 class="text-center mb-4">Most read articles</h2>
+        <div class="row">
+          <div class="col-12 col-sm-6 col-lg-3 mb-3 mb-lg-0">
+            <div class="card">
+              <img src="img/700x500.png" alt="Article image" class="card-img-top" />
+              <div class="card-body text-center">
+                <h3 class="card-title h5"><a href="article.html">Article Heading</a></h3>
+                <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat deleniti</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-3 mb-3 mb-lg-0">
+            <div class="card">
+              <img src="img/700x500.png" alt="Article image" class="card-img-top" />
+              <div class="card-body text-center">
+                <h3 class="card-title h5"><a href="article.html">Article Heading</a></h3>
+                <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat deleniti</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-3 mb-3 mb-lg-0">
+            <div class="card">
+              <img src="img/700x500.png" alt="Article image" class="card-img-top" />
+              <div class="card-body text-center">
+                <h3 class="card-title h5"><a href="article.html">Article Heading</a></h3>
+                <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat deleniti</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-3 mb-3 mb-lg-0">
+            <div class="card">
+              <img src="img/700x500.png" alt="Article image" class="card-img-top" />
+              <div class="card-body text-center">
+                <h3 class="card-title h5"><a href="article.html">Article Heading</a></h3>
+                <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat deleniti</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <script src="../Bootstrap/js/bootstrap.bundle.min.js"></script>
