Category -> page navigation is added

--- a/Knowledge Base/category.html
+++ b/Knowledge Base/category.html
@@ -51,7 +51,7 @@
               </div>
             </form>             
           </div>
-          <div class="col-12 col-lg-6 mb-3 mb-lg-0 text-muted">
+          <div class="col-12 col-lg-6 mb-3 mb-lg-0">
             <nav aria-label="Site navigation">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -59,6 +59,24 @@
                 </ol>
             </nav>
           </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-3">
+                <nav aria-label="Page navigation" class="sticky-top pt-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="h6">Page Navigation</h4>
+                            <div class="nav flex-column">
+                                <a href="#section-1" class="nav-link">Category Subheading</a>
+                                <a href="#section-2" class="nav-link">Category Subheading</a>
+                                <a href="#section-3" class="nav-link">Category Subheading</a>
+                                <a href="#section-4" class="nav-link">Category Subheading</a>
+                                <a href="#section-5" class="nav-link">Category Subheading</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
       </div>
     </main>
